--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-        <h1>CSS VARIABLES</h1>
+        <h1>CSS VARIABLES with <span class="span">JS</span></h1>
 
     <div class="controls">
         <label for="spacing">Spacing</label>
         <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px" />
 
         <label for="blur">Blur</label>
-        <input type="range" name="blur" min="0" max="200" value="10" data-sizing="px" />
+        <input type="range" name="blur" min="0" max="200" value="5" data-sizing="px" />
 
         <label for="color">Color</label>
         <input type="color" name="color">
